--- a/vercel.json
+++ b/vercel.json
@@ -2,34 +2,38 @@
   "version": 2,
   "builds": [
     {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    },
+    {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist"
       }
-    },
-    {
-      "src": "backend/main.py",
-      "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/main.py"
+      "dest": "/api/index.py"
     },
     {
       "src": "/auth/(.*)",
-      "dest": "backend/main.py"
+      "dest": "/api/index.py"
+    },
+    {
+      "src": "/",
+      "dest": "/frontend/dist/index.html"
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
+      "dest": "/frontend/dist/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "frontend/dist/$1"
+      "dest": "/frontend/dist/index.html"
     }
   ],
-  "outputDirectory": "frontend/dist",
-  "buildCommand": "cd frontend && npm install && npm run build",
-  "env": {
-    "PYTHONPATH": "backend"
-  }
+  "buildCommand": "cd frontend && npm install && npm run build"
 }
