--- a/vercel.json
+++ b/vercel.json
@@ -23,12 +23,16 @@
       "dest": "/api/index.py"
     },
     {
-      "src": "/",
-      "dest": "/frontend/dist/index.html"
+      "src": "/assets/(.*)",
+      "dest": "/frontend/dist/assets/$1"
     },
     {
       "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
       "dest": "/frontend/dist/$1"
+    },
+    {
+      "src": "/",
+      "dest": "/frontend/dist/index.html"
     },
     {
       "src": "/(.*)",
