--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,3 +13,11 @@ dependencies = [
     "python-multipart>=0.0.20",
     "uvicorn[standard]>=0.37.0",
 ]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.24.0",
+    "pytest-mock>=3.12.0",
+    "respx>=0.21.0",
+]
