--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,9 +12,9 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
     "uvicorn[standard]>=0.37.0",
+    "slowapi>=0.1.9",
 ]
 
-[project.optional-dependencies]
 test = [
     "pytest>=8.0.0",
     "pytest-asyncio>=0.24.0",
