--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -3,15 +3,15 @@ services:
     name: aibos-github-api
     runtime: python
     plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    buildCommand: uv sync --frozen
+    startCommand: uv run uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
-      - key: github_client_id
+      - key: GITHUB_CLIENT_ID
         sync: false
-      - key: github_client_secret
+      - key: GITHUB_CLIENT_SECRET
         sync: false
-      - key: secret_key
+      - key: SECRET_KEY
         sync: false
-      - key: frontend_url
-        value: https://your-frontend-url.onrender.com
+      - key: FRONTEND_URL
+        value: https://aibos-github-search.netlify.app
         sync: false
