--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
 GITHUB_CLIENT_ID=your_github_client_id_here
 GITHUB_CLIENT_SECRET=your_github_client_secret_here
-FRONTEND_URL=https://lensgithub.netlify.app
+FRONTEND_URL=http://localhost:5173
 SECRET_KEY=your_secret_key_here_change_in_production
