--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,9 +13,11 @@ dependencies = [
     "python-multipart>=0.0.20",
     "uvicorn[standard]>=0.37.0",
     "slowapi>=0.1.9",
+    "pyjwt>=2.10.1",
+    "cryptography>=44.0.0",
 ]
-
-test = [
+[tool.uv]
+dev-dependencies = [
     "pytest>=8.0.0",
     "pytest-asyncio>=0.24.0",
     "pytest-mock>=3.12.0",
