--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "eslint-plugin-vitest": "^0.5.4",
     "globals": "^16.4.0",
     "jsdom": "^25.0.1",
     "postcss": "^8.5.6",
