--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,4 +4,5 @@ pydantic>=2.12.2
 pydantic-settings>=2.11.0
 python-dotenv>=1.1.1
 python-multipart>=0.0.20
+PyJWT>=2.10.1
 uvicorn[standard]>=0.37.0
