improved pages ui

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "gsap": "^3.14.2",
     "lucide-react": "^0.546.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
