--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,6 @@ python-dotenv>=1.1.1
 python-multipart>=0.0.20
 PyJWT>=2.10.1
 uvicorn[standard]>=0.37.0
+sqlalchemy>=2.0.0
+passlib[argon2]>=1.7.4
+python-jose[cryptography]>=3.3.0
